--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ categories_path : categories.html
 tags_path : tags.html
 
 #BASE_PATH : http://blog.ankanbiswas.in/uno-dbyll
-BASE_PATH : http://localhost:4000
+BASE_PATH : http://renandias.guru
 
 
 title : Renan Dias
