--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,7 @@ highlighter: pygments
 categories_path : categories.html
 tags_path : tags.html
 
-#BASE_PATH : http://renandias.guru
-BASE_PATH : http://localhost:4000
+BASE_PATH : http://renandias.guru
 
 title : Renan Dias
 
